RESOLVED FIXED261443
Regression(267576@main) Closing Remote Web Inspector session crashes Safari
https://bugs.webkit.org/show_bug.cgi?id=261443
Summary Regression(267576@main) Closing Remote Web Inspector session crashes Safari
Chris Dumez
Reported 2023-09-11 16:38:23 PDT
Closing Remote Web Inspector session crashes Safari: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebKit 0x1a43d4ebc WTFCrashWithInfo(int, char const*, char const*, int) + 364220 1 WebKit 0x1a47a171c WTF::CanMakeCheckedPtrBase<WTF::SingleThreadIntegralWrapper<unsigned int>, unsigned int>::~CanMakeCheckedPtrBase() + 4347676 [inlined] 2 WebKit 0x1a47a171c WebKit::RemoteWebInspectorUIProxyClient::~RemoteWebInspectorUIProxyClient() + 4347676 [inlined] 3 WebKit 0x1a47a171c WebKit::_WKRemoteWebInspectorUIProxyClient::~_WKRemoteWebInspectorUIProxyClient() + 4347676 [inlined] 4 WebKit 0x1a47a171c WebKit::_WKRemoteWebInspectorUIProxyClient::~_WKRemoteWebInspectorUIProxyClient() + 4347676 [inlined] 5 WebKit 0x1a47a171c std::__1::default_delete<WebKit::_WKRemoteWebInspectorUIProxyClient>::operator()[abi:v160006](WebKit::_WKRemoteWebInspectorUIProxyClient*) const + 4347676 6 WebKit 0x1a47a06dc std::__1::unique_ptr<WebKit::_WKRemoteWebInspectorUIProxyClient, std::__1::default_delete<WebKit::_WKRemoteWebInspectorUIProxyClient> >::reset[abi:v160006](WebKit::_WKRemoteWebInspectorUIProxyClient*) + 4343516 [inlined] 7 WebKit 0x1a47a06dc std::__1::unique_ptr<WebKit::_WKRemoteWebInspectorUIProxyClient, std::__1::default_delete<WebKit::_WKRemoteWebInspectorUIProxyClient> >::~unique_ptr[abi:v160006]() + 4343516 [inlined] 8 WebKit 0x1a47a06dc std::__1::unique_ptr<WebKit::_WKRemoteWebInspectorUIProxyClient, std::__1::default_delete<WebKit::_WKRemoteWebInspectorUIProxyClient> >::~unique_ptr[abi:v160006]() + 4343516 [inlined] 9 WebKit 0x1a47a06dc -[_WKRemoteWebInspectorViewController .cxx_destruct] + 4343516 10 libobjc.A.dylib 0x180b5f218 object_cxxDestructFromClass(objc_object*, objc_class*) + 78360 ```
Attachments
Chris Dumez
Comment 1 2023-09-11 16:41:03 PDT
Chris Dumez
Comment 2 2023-09-11 16:41:36 PDT
EWS
Comment 3 2023-09-11 18:00:21 PDT
Committed 267886@main (e7cf800e186c): <https://commits.webkit.org/267886@main> Reviewed commits have been landed. Closing PR #17675 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.