Cherry-pick e7cf800e186c. rdar://115318063

Regression(267576@main) Closing Remote Web Inspector session crashes Safari
    https://bugs.webkit.org/show_bug.cgi?id=261443

    Reviewed by Patrick Angle.

    Make sure we unregister the client in [_WKRemoteWebInspectorViewController dealloc] that
    we registered in this init function since we're about to destroy the client. However, the
    RemoteWebInspectorUIProxy::m_client will point to the client being destroyed, which will
    hit a RELEASE_ASSERT() now that `RemoteWebInspectorUIProxy::m_client` is a CheckedPtr.

    * Source/WebKit/UIProcess/API/Cocoa/_WKRemoteWebInspectorViewController.mm:
    (-[_WKRemoteWebInspectorViewController dealloc]):

    Canonical link: https://commits.webkit.org/267886@main

Canonical link: https://commits.webkit.org/267815.4@safari-7617-branch